# stellar-asset-contract-spec

./: Cargo.toml  Makefile  README.md  stellar-asset-spec.json  stellar-asset-spec.xdr
.github/workflows/: generate.yml
src/: generate.rs  main.rs  version.rs
