[package]
name = "stellar-asset-contract-spec"
edition = "2021"
version = "0.0.0"
publish = false

[build-dependencies]
crate-git-revision = "0.0.6"

[dependencies]
soroban-sdk = "=22.0.7"
serde_json = "1.0.128"
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"] }
thiserror = "1.0.64"
